5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1773_2108.log
== TEST (2019-05-24 19:54:40) 
-- CODE:
x=input("Digite uma string: ")
h=0
while(len(x)>h):
	if(x[h]=="A")or(x[h]=="E")or(x[h]=="I")or(x[h]=="O")or(x[h]=="U"):
		h=h+1
	else:
		x[h]=p
		h=h+1
print(x)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x[h]=p
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:54:48) 
-- CODE:
x=input("Digite uma string: ")
h=0
while(len(x)>h):
	if(x[h]=="A")or(x[h]=="E")or(x[h]=="I")or(x[h]=="O")or(x[h]=="U"):
		h=h+1
	else:
		x[h]="p"
		h=h+1
print(x)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x[h]="p"
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:55:43) 
-- CODE:
x=input("Digite uma string: ")
h=0
while(len(x)>h):
	if(x[h]=="A")or(x[h]=="E")or(x[h]=="I")or(x[h]=="O")or(x[h]=="U"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- OUTPUT:
ppppp
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:56:03) 
-- CODE:
x=input("")
h=0
while(len(x)>h):
	if(x[h]=="A")or(x[h]=="E")or(x[h]=="I")or(x[h]=="O")or(x[h]=="U"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- OUTPUT:
ppppp
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:57:10) 
-- CODE:
x=input("").lower()
h=0
while(len(x)>h):
	if(x[h]=="a")or(x[h]=="e")or(x[h]=="i")or(x[h]=="o")or(x[h]=="u"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- OUTPUT:
peppe
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:57:16) 
-- CODE:
x=input("").lower()
h=0
while(len(x)>h):
	if(x[h]=="a")or(x[h]=="e")or(x[h]=="i")or(x[h]=="o")or(x[h]=="u"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- EXECUTION TIME:
0.15658
-- TEST CASE 1:
---- input:
teste
---- correct output:
peppe
---- user output:
peppe
-- TEST CASE 2:
---- input:
flor
---- correct output:
ppop
---- user output:
ppop
-- TEST CASE 3:
---- input:
abacaxi
---- correct output:
apapapi
---- user output:
apapapi
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:58:20) 
-- CODE:
x=input("").lower()
h=0
while(len(x)>h):
	if(x[h]=="a")or(x[h]=="e")or(x[h]=="i")or(x[h]=="o")or(x[h]=="u"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- OUTPUT:
peppe
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:58:27) 
-- CODE:
x=input("").lower()
h=0
while(len(x)>h):
	if(x[h]=="a")or(x[h]=="e")or(x[h]=="i")or(x[h]=="o")or(x[h]=="u"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- OUTPUT:
peppe
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:58:38) 
-- CODE:
x=input("").lower()
h=0
while(len(x)>h):
	if(x[h]=="a")or(x[h]=="e")or(x[h]=="i")or(x[h]=="o")or(x[h]=="u"):
		h=h+1
	else:
		x=x.replace(x[h],"p")
		h=h+1
print(x)		

-- OUTPUT:
peppe
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
